# foray

./: .gitignore  CLAUDE.md  README.md  manifest  pyproject.toml
.beads/: metadata.json
.claude/skills/: run-post-mortem.md
docs/: evo-comparison.md
docs/post-mortems/: 2026-04-12-printbot.md
docs/superpowers/plans/: 2026-04-12-evaluator-improvements.md  2026-04-12-p2-batch.md  2026-04-13-strategist-agent.md
docs/superpowers/specs/: 2026-04-12-p2-batch-design.md  2026-04-13-strategist-agent-design.md
src/foray/: cli.py  context.py  dispatcher.py  environment.py  models.py  orchestrator.py  permissions.py  scheduler.py  state.py  worktree.py
src/foray/agents/: evaluator.md  executor.md  initializer.md  planner.md  strategist.md  synthesizer.md
tests/: conftest.py  test_cli.py  test_context.py  test_dispatcher.py  test_environment.py  test_models.py  test_orchestrator.py  test_parallel.py  test_permissions.py  test_scheduler.py  test_smoke.py  test_state.py  test_worktree.py
